--- a/octave/trunk/PKGBUILD
+++ b/octave/trunk/PKGBUILD
@@ -1,46 +1,39 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor : shining <shiningxc.at.gmail.com>
+# Contributor : cyberdune <cyberdune@gmail.com>
 
 pkgname=octave
-pkgver=2.1.73
-pkgrel=6
-pkgdesc="Octave is a high-level language, primarily intended for numerical computations."
-arch=(i686 x86_64)
+pkgver=3.0.2
+pkgrel=1
+pkgdesc="A high-level language, primarily intended for numerical computations."
+arch=('i686' 'x86_64')
 url="http://www.octave.org"
-depends=('gcc-libs>=4.3.0' 'readline' 'fftw>=3.1.2-2' 'blas>=19980702-4')
-mirror="ftp://ftp.octave.org/pub/octave/obsolete/"
-#mirror="ftp://ftp.math.uni-hamburg.de/pub/soft/math/octave/"
-#source=("ftp://ftp.octave.org/pub/octave/$pkgname-$pkgver.tar.bz2")
-source=(${mirror}${pkgname}-${pkgver}.tar.bz2
-	octave.png
-	octave.desktop
-	gcc-4.3.patch)
+license=('GPL')
+depends=('fftw' 'pcre' 'curl' 'blas')
+makedepends=('texinfo')
+optdepends=('texinfo: for help-support in octave'
+            'gnuplot: to be able to plot in octave')
+provides=(octave3)
+conflicts=(octave3)
+replaces=(octave3)
+source=("ftp://ftp.octave.org/pub/octave/octave-$pkgver.tar.bz2")
+options=('!emptydirs')
 install=octave.install
-license=('GPL2')
-md5sums=('c356475aa06d81a10f8bf27f1a1d27a0'
-         '5bf187e2c47f534be9524db9d68fa305'
-         'dcac0dbefb011d538c4b290fe9b96f7c'
-         '52f37b3438b59f812034b8d0ff7e125e')
+md5sums=('931e28ab1181018c8079fb8138971ab0')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np1 -i ${startdir}/src/gcc-4.3.patch || return 1
-  FFLAGS="-O -ffloat-store" ./configure \
-        --prefix=/usr \
-        --enable-shared \
-        --enable-dl \
-	--without-hdf5 \
-	--mandir=/usr/share/man \
-	--infodir=/usr/share/info 
-  make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  cd "$srcdir/octave-$pkgver"
 
-  # install some freedesktop.org compatibility
-  install -d -m755 ${startdir}/pkg/usr/share/applications
-  install -d -m755 ${startdir}/pkg/usr/share/pixmaps
-  install -m644 ${startdir}/src/octave.desktop \
-  	${startdir}/pkg/usr/share/applications/ || return 1
-  install -m644 ${startdir}/src/octave.png \
-	${startdir}/pkg/usr/share/pixmaps/ || return 1
-  rm ${pkgdir}/usr/share/info/dir
+  ./autogen.sh
+
+  # http://www.nabble.com/Random-rounding-errors-td16010966.html
+  FFLAGS="-O -ffloat-store" \
+
+  ./configure --prefix=/usr --libexecdir=/usr/lib \
+  --without-hdf5 --without-umfpack
+
+  make || return 1
+  make DESTDIR="$pkgdir" install || return 1
 }
+
