--- a/inkscape/trunk/PKGBUILD
+++ b/inkscape/trunk/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=inkscape
 pkgver=0.46
-pkgrel=4
+pkgrel=5
 pkgdesc="A vector-based drawing program - svg compliant"
 url="http://inkscape.sourceforge.net/"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
 depends=('gtkmm>=2.12.6' 'gc>=7.0' 'desktop-file-utils' 'libxslt>=1.1.22' \
          'perl>=5.10.0' 'pyxml' 'openssl>=0.9.8d' 'lcms' 'gtkspell' 'poppler-glib>=0.8.0' \
@@ -16,13 +16,15 @@ makedepends=('perlxml' 'pkgconfig' 'boost')
 options=('!libtool')
 install=inkscape.install
 source=("http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz"
-        perl-5.10.patch)
+        perl-5.10.patch inkscape-0.46-poppler-0.8.3.patch)
 md5sums=('3bae9034047379012127e52f9b138d32'
-         'da1009efea12f6512e69cc3ec8604f4f')
+         'da1009efea12f6512e69cc3ec8604f4f'
+         'fffe7ed73bdadcf0f90282d5afc4df30')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   patch -Np1 -i ../perl-5.10.patch || return 1
+  patch -Np1 -i ../inkscape-0.46-poppler-0.8.3.patch || return 1
   CFLAGS="${CFLAGS} -I/usr/include/ImageMagick" \
   CXXFLAGS="${CXXFLAGS} -I/usr/include/ImageMagick" \
    ./configure --prefix=/usr \
