upgpkg: kdebase 4.1.1-2     adding qimageblitz as dependency; blame namcap for it. (fixes FS#11382)
git-svn-id: file:///srv/repos/svn-packages/svn@11774 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebase/trunk/PKGBUILD
+++ b/kdebase/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=kdebase
 pkgver=4.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE Base Applications"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('libraw1394' 'kdebase-runtime')
+depends=('libraw1394' 'kdebase-runtime' 'qimageblitz')
 makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4')
 optdepends=('kdebase-workspace')
 options=('docs')
