upgpkg: wicd 1.5.1-2     No autostart
git-svn-id: file:///srv/repos/svn-packages/svn@11813 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/wicd/trunk/PKGBUILD
+++ b/wicd/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=wicd
 pkgver=1.5.1
-pkgrel=1
+pkgrel=2
 pkgdesc="New and alternative wireless/wired network management utility"
 arch=('i686' 'x86_64')
 url="http://wicd.sourceforge.net/"
@@ -13,7 +13,6 @@ depends=('dbus-python' 'pygtk' 'dhclient' 'wpa_supplicant' 'ethtool')
 conflicts=('wicd-svn')
 install=wicd.install
 source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz wicd-daemon wicd.desktop)
-
 options=(emptydirs)
 md5sums=('dda372b0778de24552850d3d877d1b65' '8835ed1d4aba7effe3f157eeb0b66443' \
          'c1f3e9a18470568893a5a8f7c27d4e46')
@@ -31,4 +30,5 @@ build() {
   for i in *.py; do
     install -Dm 755 $i $startdir/pkg/usr/lib/wicd/$i
   done
+  rm -rf  ${startdir}/pkg/usr/share/autostart
 }
