upgpkg: wicd 1.5.1-3     Small fix and improvements
git-svn-id: file:///srv/repos/svn-packages/svn@11815 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/wicd/trunk/wicd.desktop
+++ b/wicd/trunk/wicd.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Categories=Application;Network;Internet;
 Encoding=UTF-8
-Exec=/usr/lib/wicd/wicd-client.py
+Exec=/usr/bin/wicd-client
 GenericName=Network Manager
 Icon=/usr/share/pixmaps/wicd/wicd-client.png
 Comment=Manage Wired/Wireless Networks
