--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=banshee
 pkgver=1.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Music management and playback for GNOME"
 arch=('i686' 'x86_64')
 url="http://banshee-project.org/"
 license=('MIT')
-depends=('sqlite3' 'ndesk-dbus-glib>=0.4.1' 'mono-addins>=0.3.1' 'taglib-sharp>=2.0.3.0' 'gstreamer0.10-good-plugins' 'gstreamer0.10-base-plugins' 'gnome-sharp>=2.20.1' 'libmtp>=0.2.6.1' 'ipod-sharp>=0.8.0' 'boo')
+depends=('sqlite3' 'ndesk-dbus-glib>=0.4.1' 'mono-addins>=0.3.1' 'taglib-sharp>=2.0.3.0' 'gstreamer0.10-good-plugins' 'gstreamer0.10-base-plugins' 'gnome-sharp>=2.20.1' 'libmtp>=0.2.6.1' 'ipod-sharp>=0.8.0' 'boo' 'mono-zeroconf')
 makedepends=('perlxml' 'pkgconfig')
 options=('!libtool' '!makeflags' '!emptydirs')
 install=banshee.install
