--- a/spamassassin/trunk/PKGBUILD
+++ b/spamassassin/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Manolis Tzanidakis
 
 pkgname=spamassassin
-pkgver=3.2.4
-pkgrel=2
+pkgver=3.2.5
+pkgrel=1
 pkgdesc="A mail filter to identify spam."
 arch=(i686 x86_64)
 license=(APACHE)
@@ -21,9 +21,9 @@ backup=(etc/conf.d/spamd etc/mail/spamassassin/local.cf \
 	etc/mail/spamassassin/v320.pre)
 install=$pkgname.install
 options=(!emptydirs)
-source=(http://www.devlib.org/apache/$pkgname/source/Mail-SpamAssassin-$pkgver.tar.gz \
+source=(http://mirrors.devlib.org/apache/$pkgname/source/Mail-SpamAssassin-$pkgver.tar.gz \
 		spamd.conf.d spamd)
-md5sums=('81ec227d4d63aba08563ee868af9fbeb'
+md5sums=('7fdc1651d0371c4a7f95ac9ae6f828a6'
          'af501c6b0bb937a2775b747cc4b6d150'
          '6f1636c8a547345ea7fddcbbf106abf7')
 
