upgpkg: spamassassin-spamc 3.2.5-1
git-svn-id: file:///srv/repos/svn-packages/svn@11834 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/spamassassin-spamc/trunk/PKGBUILD
+++ b/spamassassin-spamc/trunk/PKGBUILD
@@ -1,8 +1,9 @@
 # $Id$
 # Maintainer: Dale Blount <dale@archlinux.org>
+# Contributor: Dale Blount <dale@archlinux.org>
 
 pkgname=spamassassin-spamc
-pkgver=3.2.0
+pkgver=3.2.5
 pkgrel=1
 pkgdesc="Standalone C Client to spamassassin."
 arch=(i686 x86_64)
@@ -13,8 +14,8 @@ makedepends=()
 license=('APACHE')
 backup=()
 install=
-source=(http://www.devlib.org/apache/spamassassin/source/Mail-SpamAssassin-$pkgver.tar.gz)
-md5sums=('aed988bb6cf463afc868a64d4cd771a3')
+source=(http://mirrors.devlib.org/apache/spamassassin/source/Mail-SpamAssassin-$pkgver.tar.gz)
+md5sums=('7fdc1651d0371c4a7f95ac9ae6f828a6')
 
 build() {
   cd $startdir/src/Mail-SpamAssassin-$pkgver
@@ -25,4 +26,3 @@ build() {
   mkdir -p $startdir/pkg/usr/bin || return 1
   install -m755 spamc/spamc $startdir/pkg/usr/bin/ || return 1
 }
-
