--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgname=inkscape
 pkgver=0.46
-pkgrel=6
+pkgrel=7
 pkgdesc="A vector-based drawing program - svg compliant"
 url="http://inkscape.sourceforge.net/"
 arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
 depends=('gtkmm>=2.12.6' 'gc>=7.0' 'desktop-file-utils' 'libxslt>=1.1.22' \
          'perl>=5.10.0' 'pyxml' 'openssl>=0.9.8d' 'lcms' 'gtkspell' 'poppler-glib>=0.8.0' \
-         'imagemagick>=6.4.0.2' 'popt' 'gnome-vfs')
+         'imagemagick>=6.4.0.2' 'popt')
 makedepends=('perlxml' 'pkgconfig' 'boost')
 options=('!libtool')
 install=inkscape.install
@@ -34,7 +34,7 @@ build() {
     --with-xft \
     --with-python \
     --with-perl \
-    --with-gnome-vfs || return 1
+    --without-gnome-vfs || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
