upgpkg: gmoo 0.5.6-3     added x86_64 arch tag
git-svn-id: file:///srv/repos/svn-packages/svn@11844 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gmoo/trunk/PKGBUILD
+++ b/gmoo/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=gmoo
 pkgver=0.5.6
 pkgrel=3
 url="http://www.luon.net/~gert/"
-arch=('i686')
+arch=('i686' 'x86_64')
 license=('GPL')
 pkgdesc="A MUD client"
 depends=('gdk-pixbuf' 'imlib')
