upgpkg: spamassassin-spamc 3.2.5-1     added missing makedepends
git-svn-id: file:///srv/repos/svn-packages/svn@11848 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/spamassassin-spamc/trunk/PKGBUILD
+++ b/spamassassin-spamc/trunk/PKGBUILD
@@ -10,7 +10,7 @@ arch=(i686 x86_64)
 url="http://spamassassin.apache.org"
 conflicts=('spamassassin')
 depends=('openssl' 'zlib')
-makedepends=() 
+makedepends=('perl-digest-sha1' 'perl-html-parser' 'perl-net-dns') 
 license=('APACHE')
 backup=()
 install=
