upgpkg: cpufrequtils 005-1     New version 005
git-svn-id: file:///srv/repos/svn-packages/svn@11853 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/cpufrequtils/trunk/PKGBUILD
+++ b/cpufrequtils/trunk/PKGBUILD
@@ -3,18 +3,18 @@
 # Contributor: phrakture <aaronmgriffin+gmail+com>
 
 pkgname=cpufrequtils
-pkgver=004
+pkgver=005
 pkgrel=1
 pkgdesc="Userspace tools for the kernel cpufreq subsystem"
 arch=('i686' 'x86_64')
 url="http://www.kernel.org/pub/linux/utils/kernel/cpufreq/cpufrequtils.html"
 license=('GPL')
-depends=("sysfsutils")
+depends=('sysfsutils')
 backup=('etc/conf.d/cpufreq')
 source=(http://www.kernel.org/pub/linux/utils/kernel/cpufreq/$pkgname-$pkgver.tar.bz2 \
     cpufreq.rcd cpufreq.confd)
 options=(force !libtool)
-md5sums=('f868b9b6642c6c16b36cfd3eb627506a' '7be9ea55db712327783162ba6f7659ab'
+md5sums=('73a41589fe74b73fc530f4179f2c6142' '7be9ea55db712327783162ba6f7659ab'
          '8335b8503376a3776da2ddc84043887c')
 
 build()
