--- a/cpufreqd/trunk/PKGBUILD
+++ b/cpufreqd/trunk/PKGBUILD
@@ -3,18 +3,18 @@
 # Committer: Manolis Tzanidakis <manolis@archlinux.org>
 
 pkgname=cpufreqd
-pkgver=2.2.1
-pkgrel=2
+pkgver=2.3.3
+pkgrel=1
 pkgdesc="A small daemon to adjust cpu speed (and indeed voltage)"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 url="http://sourceforge.net/projects/cpufreqd"
 license=('GPL2')
 depends=('cpufrequtils')
 install="$pkgname.install"
 backup=(etc/cpufreqd.conf)
 options=('!libtool')
-source=(http://dl.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.bz2  cpufreqd)
-md5sums=('e66f22915c8ce609cd0c8f254da11c08' 'ae7b0ec1e8e9f9e7f05fb83749af4ed4')
+source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.bz2  cpufreqd)
+md5sums=('ab7b3e85b62814cfd96de1a7a22855af' 'ae7b0ec1e8e9f9e7f05fb83749af4ed4')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
