upgpkg: kdepimlibs 4.1.1-2     Fix crash (while displaying a mail which has a calendar entry in it)
git-svn-id: file:///srv/repos/svn-packages/svn@11857 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepimlibs/trunk/PKGBUILD
+++ b/kdepimlibs/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=kdepimlibs
 pkgver=4.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE PIM Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -11,16 +11,19 @@ license=('GPL' 'LGPL')
 groups=('kde')
 depends=('kdelibs' 'akonadi' 'gpgme')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'cyrus-sasl' 'openldap')
-source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('36316f5fc5b2e0ec123a8e00a522dd80')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
+        'fix-invitations.diff')
+md5sums=('36316f5fc5b2e0ec123a8e00a522dd80' '9e9ac55a992a3d9eb715ccadc8f1bac6')
 
 build() {
-	cd $srcdir
+	cd $srcdir/${pkgname}-${pkgver}
+	patch -p4 -i $srcdir/fix-invitations.diff || return 1
+	cd ..
 	mkdir build
 	cd build
 	cmake ../${pkgname}-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make
-	make DESTDIR=$startdir/pkg install
+	make DESTDIR=$pkgdir install
 }
