--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor:  John Proctor <jproctor@prium.net>
 
 pkgname=fluxbox
-pkgver=1.0.0
+pkgver=1.1.0.1
 pkgrel=1
 pkgdesc="A lightweight and highly-configurable window manager"
 arch=('i686' 'x86_64')
@@ -12,27 +12,21 @@ license=('MIT')
 depends=('libxft' 'libxpm' 'libxinerama' 'libxrandr' 'gcc-libs' 'bash' 'imlib2')
 makedepends=('pkgconfig')
 options=('!makeflags')
-source=(http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.bz2 \
-        $pkgname.desktop fluxbox-1.0.0-gcc43.patch)
-md5sums=('990e276ead0d04421dce4080f485caca' 'eeae9c88a2526ac0bd8afcd9ce97f9ed'\
-         '9ddb3fcd5f080574a44f394282132b3c')
-sha1sums=('7985e35fbb170fda24b9e04610690cd04c7a8748'
-          'f3f83b8ce84d79c2f8670ef687e0dd89ab0552b8'
-          '51de3957bacfc4848529ba7df80bddca59b1a20b')
+source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2 \
+        fluxbox.desktop)
+md5sums=('421366dbb21592196b5dde6c8ea11229' 'eeae9c88a2526ac0bd8afcd9ce97f9ed')
+sha1sums=('70d41a0192b77d2da491221185ce1a7ec4ebda3c' 'f3f83b8ce84d79c2f8670ef687e0dd89ab0552b8')
 
 build() {
-  cd $startdir/src/$pkgname-${pkgver}
-  patch -p1 < ../fluxbox-1.0.0-gcc43.patch || return 1
+  cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr \
-   --enable-kde --enable-gnome \
-   --enable-xft --enable-xinerama \
-   --enable-imlib2 --enable-nls
+    --enable-kde --enable-gnome \
+    --enable-xft --enable-xinerama \
+    --enable-imlib2 --enable-nls || return 1
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=${pkgdir} install || return 1
  # this is a fix to allow fluxbox to shutdown, but this can be changed by the user :-(
-  sed -i 's|^.*slit\.autoHide.*$|session.screen0.slit.autoHide:  True|' \
-    $startdir/pkg/usr/share/fluxbox/init
-  install -D -m644 ../$pkgname.desktop \
-    $startdir/pkg/etc/X11/sessions/$pkgname.desktop
-  install -D -m644 COPYING $startdir/pkg/usr/share/licenses/$pkgname/COPYING
+  sed -i 's|^.*slit\.autoHide.*$|session.screen0.slit.autoHide:  True|' ${pkgdir}/usr/share/fluxbox/init || return 1
+  install -D -m644 ../fluxbox.desktop ${pkgdir}/etc/X11/sessions/fluxbox.desktop || return 1
+  install -D -m644 COPYING ${pkgdir}/usr/share/licenses/$pkgname/COPYING || return 1
 }
