upgpkg: python-eyed3 0.6.16-1     Updated for i686: 0.6.16
git-svn-id: file:///srv/repos/svn-packages/svn@11877 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/python-eyed3/trunk/PKGBUILD
+++ b/python-eyed3/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 #Contributor: cdhotfire <cdhotfire@gmail.com>
 
 pkgname=python-eyed3
-pkgver=0.6.14
+pkgver=0.6.16
 pkgrel=1
 pkgdesc="A Python module and program for processing information about mp3 files"
 arch=(i686 x86_64)
@@ -12,11 +12,11 @@ url="http://eyed3.nicfit.net/"
 license=('GPL')
 depends=('python>=2.5')
 source=(http://eyed3.nicfit.net/releases/eyeD3-$pkgver.tar.gz)
-md5sums=('c4f81b3cbb72993244f27ab740abbccc')
 options=(!emptydirs)
 
-build()
-{
+md5sums=('b8fe36835c2775fd69a0ff18e15f2743')
+
+build() {
   cd $startdir/src/eyeD3-$pkgver
   ./configure --prefix=/usr
   make || return 1
