--- a/python-opengl/trunk/PKGBUILD
+++ b/python-opengl/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Douglas Soares de Andrade <douglas@archlinux.org>
 
 pkgname=python-opengl
-pkgver=3.0.0b3
+pkgver=3.0.0b5
 pkgrel=1
 pkgdesc="The cross platform Python binding to OpenGL and related APIs"
 arch=(i686 x86_64)
@@ -14,9 +14,9 @@ provides=('pyopengl' 'python-pyopengl')
 conflicts=('pyopengl' 'python-pyopengl')
 url="http://pyopengl.sourceforge.net"
 
-source=(http://dl.sourceforge.net/pyopengl/PyOpenGL-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/pyopengl/PyOpenGL-$pkgver.tar.gz)
 
-md5sums=('a9ef90a2256df749b859dc04d221a6dc')
+md5sums=('4e46b6ce318b82799109a4850dd37c50')
 
 build() {
     cd $startdir/src/PyOpenGL-$pkgver
