upgpkg: monotone 0.41-2     Updated for i686: Removing info dir
git-svn-id: file:///srv/repos/svn-packages/svn@11886 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/monotone/trunk/PKGBUILD
+++ b/monotone/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=monotone
 pkgver=0.41
-pkgrel=1
+pkgrel=2
 pkgdesc="A modern distributed version control system, like hg, darcs, or git"
 url="http://www.monotone.ca"
 license=("GPL")
@@ -23,6 +23,9 @@ build() {
   ./configure --prefix=/usr --sysconfdir=/etc
   make || return 1
   make DESTDIR=$startdir/pkg install
+
+  # removing info dir
+  rm -rf $startdir/pkg/usr/share/info
 
   # install completion scripts
   mkdir -p $startdir/pkg/etc/bash_completion.d
