--- a/xclip/repos/extra-x86_64/PKGBUILD
+++ b/xclip/repos/extra-x86_64/PKGBUILD
@@ -3,20 +3,19 @@
 # Committer: Manolis Tzanidakis <manolis@archlinux.org>
 
 pkgname=xclip
-pkgver=0.10
+pkgver=0.11
 pkgrel=1
 pkgdesc="A command line utility that provides interface to Xclipboard."
 arch=(i686 x86_64)
 url="http://sourceforge.net/projects/xclip"
 depends=('libxmu')
 license=('GPL')
-source=(http://dl.sourceforge.net/sourceforge/xclip/$pkgname-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/sourceforge/xclip/$pkgname-$pkgver.tar.gz)
+md5sums=('4caf3a2b03c36981f9af36a8e8582951')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
   ./configure --prefix=/usr
   make || return 1
-  install -D -m 755 xclip $startdir/pkg/usr/bin/xclip
-  install -D -m 644 xclip.man $startdir/pkg/usr/man/man1/xclip.1
+  make DESTDIR=$startdir/pkg install
 }
-md5sums=('6861a48812f9f6dbdf584c70da6fd16b')
