upgpkg: net-snmp 5.4.2-1     Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@11900 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/net-snmp/trunk/PKGBUILD
+++ b/net-snmp/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Dale Blount <dale@archlinux.org>
 
 pkgname=net-snmp
-pkgver=5.4.1.2
+pkgver=5.4.2
 pkgrel=1
 pkgdesc="A suite of applications used to implement SNMP v1, SNMP v2c and SNMP v3 using both IPv4 and IPv6"
 arch=('i686' 'x86_64')
@@ -15,11 +15,11 @@ provides=('ucd-snmp')
 options=('!libtool' '!makeflags' '!emptydirs')
 source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.gz \
 	snmpd.rc)
-md5sums=('2dfcf97d65f3b7d34b78c8d4be11fc83' '9f0d13676ba1fae1eb7eb178edd85b43')
-sha1sums=('aebe7d881f26403abd6b9ef3e69565beb041138d' '2c679b564a2c319d9ce2714a9776aa0e6d89c60a')
+md5sums=('2c97d0d99e1ec89d64f6713c069079ad' '9f0d13676ba1fae1eb7eb178edd85b43')
+sha1sums=('5b69da7d60bbc1092b61992f2d9ccb1051377ec6' '2c679b564a2c319d9ce2714a9776aa0e6d89c60a')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
  
   ./configure --prefix=/usr --sysconfdir=/etc --mandir=/usr/share/man \
     --enable-ucd-snmp-compatibility --with-libwrap \
@@ -29,11 +29,11 @@ build() {
     --with-persistent-directory="/var/net-snmp" || return 1
 
   make NETSNMP_DONT_CHECK_VERSION=1 || return 1
-  make DESTDIR=${startdir}/pkg INSTALL_PREFIX=${startdir}/pkg INSTALLDIRS=vendor install || return 1
-  install -D -m755 ${startdir}/src/snmpd.rc ${startdir}/pkg/etc/rc.d/snmpd || return 1
-  install -D -m644 COPYING ${startdir}/pkg/usr/share/licenses/${pkgname}/COPYING || return 1
+  make DESTDIR=${pkgdir} INSTALL_PREFIX=${pkgdir} INSTALLDIRS=vendor install || return 1
+  install -D -m755 ${srcdir}/snmpd.rc ${pkgdir}/etc/rc.d/snmpd || return 1
+  install -D -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING || return 1
 
   # remove perllocal.pod and .packlist
-  find ${startdir}/pkg -name perllocal.pod -delete
-  find ${startdir}/pkg -name .packlist -delete
+  find ${pkgdir} -name perllocal.pod -delete
+  find ${pkgdir} -name .packlist -delete
 }
