--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,12 +7,13 @@ pkgrel=1
 pkgdesc="Python bindings for the GeoIP IP-to-country resolver library."
 arch=(i686 x86_64)
 url="http://www.maxmind.com/app/python"
+license=('LGPL')
 depends=('python>=2.5' 'geoip')
 source=(http://www.maxmind.com/download/geoip/api/python/GeoIP-Python-${pkgver}.tar.gz)
+md5sums=('537ddd7b6000a283f96bdcb0a563b12e')
 replaces=('geoip-python')
 provides=('geoip-python')
 
-md5sums=('537ddd7b6000a283f96bdcb0a563b12e')
 
 build() {
   cd ${startdir}/src/GeoIP-Python-${pkgver}
