upgpkg: smb4k 0.10.0-1     New version 0.10.0
git-svn-id: file:///srv/repos/svn-packages/svn@11912 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/smb4k/trunk/PKGBUILD
+++ b/smb4k/trunk/PKGBUILD
@@ -2,25 +2,24 @@
 # Maintainer: Travis Willard <travisw@wmpub.ca>
 # Contributor: Alexander 'dma147' Mieland <dma147@linux-stats.org>
 # Contributor: Roberto Filippone <rfilippone@gmail.com>
+# Contributor: Emanuele Rampichini <emanuele.rampichini@gmail.com>
 
 pkgname=smb4k
-pkgver=0.9.6
-pkgrel=2
+pkgver=0.10.0
+pkgrel=1
 pkgdesc="A KDE program that browses samba shares."
 arch=('i686' 'x86_64')
 url="http://smb4k.berlios.de/"
-license=('GPL')
-depends=('kdelibs3' 'smbclient>=3.0')
-makedepends=('fam' 'libpng')
-options=('libtool') #SMB4k now requires .la files to run. :(
+license=('GPL2')
+depends=('kdebase-runtime')
+makedepends=('cmake' 'automoc4')
 install=smb4k.install
 source=(http://download.berlios.de/smb4k/$pkgname-$pkgver.tar.bz2)
-md5sums=('e02948415fc2b56c4f6bf0c6dff9dbad')
+md5sums=('9b41d9041894abc1c8cc5c71e58d3ec2')
 
 build() {
-    cd $startdir/src/$pkgname-$pkgver
-    . /etc/profile.d/kde3.sh
-    ./configure --prefix=/opt/kde --without-arts --with-konqplugin=no
-    make || return 1
-    make DESTDIR=$startdir/pkg install
-} 
+  cd $startdir/src/$pkgname-$pkgver
+  cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=RELEASE
+  make VERBOSE=1 || return 1
+  make DESTDIR=$startdir/pkg install || return 1
+}
