--- a/libxklavier/trunk/PKGBUILD
+++ b/libxklavier/trunk/PKGBUILD
@@ -3,21 +3,20 @@
 # Contributor: Arjan Timmerman <arjan@archlinux.org>
 
 pkgname=libxklavier
-pkgver=3.6
+pkgver=3.7
 pkgrel=1
 pkgdesc="High-level API for X Keyboard Extension"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('libxkbfile>=1.0.5' 'libxml2>=2.6.32' 'glib2>=2.16.4' 'xkeyboard-config>=1.3')
+depends=('libxkbfile>=1.0.5' 'libxml2>=2.6.32' 'glib2>=2.18.0' 'xkeyboard-config>=1.3')
 makedepends=('pkgconfig')
 options=('!libtool' '!emptydirs')
 url="http://gswitchit.sourceforge.net"
-source=(http://downloads.sourceforge.net/gswitchit/${pkgname}-${pkgver}.tar.gz)
-md5sums=('19b5ba95a7295831c0f4d5be1aae1376')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('ee167645becd11309d64c6ff3a1600ff')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  #sed -i -e 's/-Werror//g' libxklavier/Makefile.{in,am} || return 1
   ./configure --prefix=/usr \
 	--with-xkb-base=/usr/share/X11/xkb --disable-static || return 1
   make || return 1
