upgpkg: xf86-input-joystick 1.3.3-1
git-svn-id: file:///srv/repos/svn-packages/svn@11928 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-input-joystick/trunk/PKGBUILD
+++ b/xf86-input-joystick/trunk/PKGBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-input-joystick
-pkgver=1.3.2
+pkgver=1.3.3
 pkgrel=1
 pkgdesc="X.Org Joystick input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+makedepends=('pkgconfig' 'xorg-server>=1.5.0')
+conflicts=('xorg-server<1.5.0')
 groups=('xorg-input-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('e48b99e55093525ebb7811a014391a0b')
+md5sums=('708a1663a291b4f3a5a186ce003c1537')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
