--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -24,6 +24,10 @@ options=(!makeflags)
 source=(http://www.kernel.org/pub/linux/utils/kernel/hotplug/$pkgname-$pkgver.tar.bz2
         81-arch.rules load-modules.sh cdsymlinks.sh root-link.sh arch-udev-rules.patch
         readme-udev-arch.txt)
+md5sums=('59ebde702f1ab557be15ae76d645665b' '610f75f2b05437b14f3bc3418f8e7f65'\
+         '945f6d30ab458189b3c17f8e6722da1f' '8424b78e9dd772e75b4ef90814807815'\
+         '2d6dc6842464f107bccc68cd505a6c31' 'c17e075cc1806bf94a3678168ddec4e1'\
+         '7fc6d33bb218e752302eef0a80ff0a89')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
