--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Jan de Groot <jan@archlinux.org>
 
 pkgname=gnome-menus
-pkgver=2.23.6
+pkgver=2.23.91
 pkgrel=1
 pkgdesc="GNOME menu specifications"
 arch=(i686 x86_64)
-depends=('pygtk>=2.12.1' 'glib2>=2.17.7')
+depends=('pygtk>=2.13.0')
 makedepends=('perlxml' 'pkgconfig')
 options=('!libtool')
 license=('GPL' 'LGPL')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2
 	menus.patch)
-md5sums=('bc921ce52815009498c63031933ff906' '37b1021887f60a9cead67172e51a3a18')
+md5sums=('33125708678e1fb5225e48d1f93f1ea9' '37b1021887f60a9cead67172e51a3a18')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
