--- a/epiphany-extensions/repos/gnome-i686/PKGBUILD
+++ b/epiphany-extensions/repos/gnome-i686/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=epiphany-extensions
-pkgver=2.22.2
-pkgrel=2
+pkgver=2.23.91
+pkgrel=1
 url="http://www.gnome.org/projects/epiphany/"
 pkgdesc="Various extentions for the Epiphany web browser"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('epiphany>=2.22.2-2' 'xulrunner>=1.9' 'python>=2.5' 'opensp')
+depends=('epiphany>=2.23.91' 'xulrunner>=1.9.0.1' 'python>=2.5' 'opensp')
 makedepends=('pkgconfig' 'gnome-doc-utils>=0.12.2')
 options=('!libtool' '!emptydirs')
 install=epiphany-extensions.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('9728577d63117275d8f12d529ecc866d')
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e650ec33d428e9b5e91441b11c0fbf61')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
