--- a/gedit/repos/gnome-i686/PKGBUILD
+++ b/gedit/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gedit
-pkgver=2.22.3
+pkgver=2.23.91
 pkgrel=1
 pkgdesc="A text editor for GNOME"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('pygtk>=2.12.1' 'pygtksourceview2>=2.2.0' 'enchant>=1.4.2' 'libgnomeui>=2.22.1' 'desktop-file-utils' 'iso-codes' 'gtksourceview2>=2.2.1')
+depends=('gconf>=2.23.2' 'pygtk>=2.13.0' 'pygtksourceview2>=2.3.0' 'enchant>=1.4.2' 'desktop-file-utils' 'iso-codes' 'gtksourceview2>=2.3.2')
 makedepends=('perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
 groups=('gnome-extra')
 options=('!libtool' '!emptydirs')
 url="http://www.gnome.org"
 install=gedit.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('9af45548bf8f2c335906c95877df4699')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('041d69d83279b5eb015622847e660779')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
