--- a/opal/repos/gnome-i686/PKGBUILD
+++ b/opal/repos/gnome-i686/PKGBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Jan de Groot <jan@archlinux.org>
 # Contributor: Tom K <tomk@runbox.com>
 pkgname=opal
-pkgver=2.2.11
-pkgrel=2
+pkgver=3.3.1
+pkgrel=1
 pkgdesc="Open Phone Abstraction Library"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('pwlib>=1.10.10')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.2/${pkgname}-${pkgver}.tar.bz2)
+depends=('ptlib>=2.3.1' 'libtheora' 'x264>=20080625')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/3.3/${pkgname}-${pkgver}.tar.bz2)
 url="http://www.ekiga.org"
-md5sums=('b759033c85a1351e00ad1a29e4f50f26')
+md5sums=('6e7525b440c9fb2d68b8767996ab4a76')
 
 build() {
   cd ${startdir}/src/opal-${pkgver}
