upgpkg: xfce4-session 4.4.2-3     removed legacy artwork from package
git-svn-id: file:///srv/repos/svn-packages/svn@12003 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: Tobias Kieslich <tobias@archlinux.org>
 
 pkgname=xfce4-session
 pkgver=4.4.2
-pkgrel=2
+pkgrel=3
 pkgdesc="A session manager for Xfce"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -14,9 +14,8 @@ makedepends=('xfce-mcs-manager>=4.4.2' 'pkgconfig')
 replaces=('xfce4-toys')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://www.xfce.org/archive/xfce-${pkgver}/src/${pkgname}-${pkgver}.tar.bz2 \
-        ftp://ftp.archlinux.org/other/xfce4-graphics/ArchLinux-xfce4-balou.tar.gz)
-md5sums=('4c3d1acb8ce37ea4dd55d82aeb38e9e7' 'c5daea785ed798147eae2fb443dfe452')
+source=(http://www.xfce.org/archive/xfce-${pkgver}/src/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('4c3d1acb8ce37ea4dd55d82aeb38e9e7')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
@@ -26,8 +25,4 @@ build() {
     --with-shutdown-style=auto || return 1
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
-  install -m755 -d ${pkgdir}/usr/share/themes
-  cp -r ../ArchLinux ${pkgdir}/usr/share/themes/ || return 1
-  # FIXME: remove some leftover files from artwork package
-  rm -rf ${pkgdir}/usr/share/themes/ArchLinux/balou/.thumbnails
 }
