upgpkg: xfwm4 4.4.2-4     removed legacy artwork from package
git-svn-id: file:///srv/repos/svn-packages/svn@12005 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,9 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: Tobias Kieslich <tobias@archlinux.org>
 
 pkgname=xfwm4
 pkgver=4.4.2
-pkgrel=3
+pkgrel=4
 pkgdesc="Xfce window manager, compatible with Gnome, Gnome2, KDE2, and KDE3"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -15,10 +15,8 @@ makedepends=('xfce-mcs-manager' 'pkgconfig')
 options=('!libtool')
 install=${pkgname}.install
 source=(http://www.xfce.org/archive/xfce-${pkgver}/src/${pkgname}-${pkgver}.tar.bz2
-        ftp://ftp.archlinux.org/other/xfce4-graphics/ArchLinux-xfce4-xfwm4.tar.gz
-	bug3439.patch)
-md5sums=('21da77e50b07e72bba784bf3418ca067' '8ed0d3c7dc07dde88ba7b38ce5006730' \
-         'c65b0f59bebd10ea771042e7657ebdef')
+        bug3439.patch)
+md5sums=('21da77e50b07e72bba784bf3418ca067' 'c65b0f59bebd10ea771042e7657ebdef')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
@@ -28,5 +26,4 @@ build() {
     --enable-compositor --enable-xsync || return 1
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
-  cp -R ${srcdir}/ArchLinux ${pkgdir}/usr/share/themes || return 1
 }
