upgpkg: conky 1.6.1-1     removed empty directory
git-svn-id: file:///srv/repos/svn-packages/svn@12010 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/conky/trunk/PKGBUILD
+++ b/conky/trunk/PKGBUILD
@@ -13,6 +13,7 @@ replaces=('torsmo')
 depends=('libxext' 'libxml2' 'curl' 'wireless_tools' 'libxft' 'glib2' 'libxdamage')
 makedepends=('pkgconfig')
 source=(http://downloads.sourceforge.net/sourceforge/conky/$pkgname-$pkgver.tar.bz2)
+md5sums=('b2839f21cec18e5eaa338c7440a1ba28')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
@@ -22,7 +23,7 @@ build() {
   make DESTDIR=$startdir/pkg install
   mkdir -p $startdir/pkg/etc/xdg/
   mv $startdir/pkg/usr/etc/conky/ $startdir/pkg/etc/xdg/
+  rmdir $startdir/pkg/usr/etc
   install -D -m644 COPYING $startdir/pkg/usr/share/licenses/$pkgname/COPYING
 }
 
-md5sums=('b2839f21cec18e5eaa338c7440a1ba28')
