upgpkg: xarchiver 0.5.0beta1-6
git-svn-id: file:///srv/repos/svn-packages/svn@12044 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xarchiver/trunk/PKGBUILD
+++ b/xarchiver/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Andrew Simmons <andrew.simmons@gmail.com>
 
 pkgname=xarchiver
-pkgver=0.4.6
+pkgver=0.5.0beta1
 pkgrel=6
 pkgdesc="a GUI for multiple archive types"
 arch=(i686 x86_64)
@@ -14,7 +14,7 @@ makedepends=('intltool' 'pkgconfig')
 options=('!libtool')
 install=${pkgname}.install
 source=(http://dl.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('9700305deef4e2b6878697bd18bd2dd9')
+md5sums=('d57dcae78473681d6cd3b8dcf6e5c3d1')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
